--- a/chnword/Base.lproj/Main.storyboard
+++ b/chnword/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -274,8 +274,8 @@
                     </tabBar>
                     <connections>
                         <segue destination="b0h-VT-Gdu" kind="relationship" relationship="viewControllers" id="ghS-nN-SJs"/>
-                        <segue destination="crI-sQ-UAw" kind="relationship" relationship="viewControllers" id="R4H-eL-NV4"/>
-                        <segue destination="UXZ-5C-6Wq" kind="relationship" relationship="viewControllers" id="Av4-2b-l7z"/>
+                        <segue destination="HD2-aP-ycp" kind="relationship" relationship="viewControllers" id="2yg-ow-IVY"/>
+                        <segue destination="utr-gS-PDD" kind="relationship" relationship="viewControllers" id="f5A-hj-PO3"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3dC-e1-lCx" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -286,7 +286,7 @@
         <scene sceneID="95J-Sr-H1H">
             <objects>
                 <tableViewController automaticallyAdjustsScrollViewInsets="NO" id="b0h-VT-Gdu" customClass="HomePageController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" dataMode="static" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="xyB-uX-NmE">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" keyboardDismissMode="onDrag" dataMode="static" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="xyB-uX-NmE">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -430,7 +430,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3eR-Oz-K82" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4766" y="1155"/>
+            <point key="canvasLocation" x="4114" y="1008"/>
         </scene>
         <!--建议反馈-->
         <scene sceneID="5y1-bn-fti">
@@ -503,7 +503,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xKb-DL-fGd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3955" y="1737"/>
+            <point key="canvasLocation" x="4114" y="2001"/>
         </scene>
         <!--User View Controller-->
         <scene sceneID="G9n-97-RJd">
@@ -697,11 +697,12 @@
                             <outlet property="delegate" destination="utr-gS-PDD" id="gzz-tU-mM7"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="" image="TAB-User" id="huS-aU-hk0"/>
                     <navigationItem key="navigationItem" id="c0Q-Hi-ncP"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x6S-YN-hHZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3955" y="995"/>
+            <point key="canvasLocation" x="3269" y="1008"/>
         </scene>
         <!--产品商店-->
         <scene sceneID="3UY-tn-oGM">
@@ -853,6 +854,7 @@
                             <outlet property="delegate" destination="HD2-aP-ycp" id="3EG-dz-yg1"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="" image="TAB-Shop" id="ixV-CT-B4W"/>
                     <navigationItem key="navigationItem" title="产品商店" id="2E5-MP-aEU"/>
                     <connections>
                         <outlet property="shopAnime" destination="24H-1V-TXq" id="JZ2-s9-Lu3"/>
@@ -862,7 +864,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bUQ-l2-AxI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2412" y="1000"/>
+            <point key="canvasLocation" x="2488" y="1008"/>
         </scene>
         <!--《三千字》字课产品-->
         <scene sceneID="sGV-MD-KAy">
@@ -1039,7 +1041,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lwJ-gT-Ab5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="800" y="2963"/>
+            <point key="canvasLocation" x="800" y="2935"/>
         </scene>
         <!--Qr Search View Controller-->
         <scene sceneID="Y0o-Zo-dTH">
@@ -1145,7 +1147,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jxw-VR-mQC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2445" y="2975"/>
+            <point key="canvasLocation" x="1600" y="2935"/>
         </scene>
         <!--PLAYER-->
         <scene sceneID="NXQ-3p-wLJ">
@@ -1483,7 +1485,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J67-I5-Ici" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1600" y="1987"/>
+            <point key="canvasLocation" x="2488" y="1995"/>
         </scene>
         <!--SHOP-ANIME-->
         <scene sceneID="d3z-CX-Pfl">
@@ -1563,7 +1565,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3UR-25-dJv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2381" y="1987"/>
+            <point key="canvasLocation" x="3269" y="1995"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="det-ro-Lju">
@@ -1581,45 +1583,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="USt-23-l3C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1633" y="2975"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="5gS-TJ-9HB">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UXZ-5C-6Wq" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="TAB-User" id="KqQ-Rg-0vP"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zNP-Ji-1nr">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="utr-gS-PDD" kind="relationship" relationship="rootViewController" id="YBp-6l-kpn"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Y44-ua-jAx" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3193" y="1000"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="hx1-CB-V2t">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="crI-sQ-UAw" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="TAB-Shop" id="nAw-UR-gcK"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="WXT-c5-AUY">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="HD2-aP-ycp" kind="relationship" relationship="rootViewController" id="8BP-HA-7TC"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5hn-Uu-4Ni" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1600" y="1000"/>
+            <point key="canvasLocation" x="1600" y="1995"/>
         </scene>
     </scenes>
     <resources>
